stubbing out homepage header

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,15 @@
 {{ define "main" }}
   <main>
     <header class="homepage-header">
-      <h1>{{.Title}}</h1>
-      {{ with .Params.subtitle }}
-      <span class="subtitle">{{.}}</span>
-      {{ end }}
+      <div class="homepage-header__contents">
+        <a class="homepage-header__permalink" href="{{.Site.BaseURL}}">
+          <h1 class="homepage-header__title">{{.Site.Title}}</h1>
+        </a>
+        {{ with .Site.Params.Subtitle }}
+          <span class="homepage-header__subtitle">{{.}}</span>
+        {{ end }}
+        <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1006.79 36.77"><defs><style>.cls-1{fill:#e51515;}</style></defs><title>squiggle</title><path class="cls-1" d="M999.06,20.34c-17.31-.05-34.1-1.87-50.71-6.84-13.23-4-26.12-8.58-39.83-10.71a217.86,217.86,0,0,0-60.67-.85c-14.35,1.84-27.8,5.88-41.54,10.22C774.06,22.34,737.77,23.76,705,14.8c-12.8-3.51-25.16-8.35-38.22-10.93C647.31,0,626.9-.58,607.12,1.17c-15.29,1.35-29.79,4.92-44.36,9.61-14.35,4.63-28.65,8.11-43.76,9.09-18.81,1.22-38.11.67-56.51-3.71-12.79-3.06-25-8-37.84-11-34.34-8.19-71.89-6.37-105.45,4.3-13.32,4.24-26.53,8.36-40.51,9.83-19.21,2-39.37,1.91-58.37-1.85-13.23-2.62-25.76-7.56-38.74-11.07C163.55,1.44,144.76,0,126.13.4A185.53,185.53,0,0,0,76.19,7.91c-13,3.93-25.8,8.47-39.34,10.56A195.64,195.64,0,0,1,7.73,20.34c-10.3,0-10.32,16,0,16,17.91-.05,35.73-1.85,53-6.83C73.81,25.73,86.52,21,100,18.63A196.4,196.4,0,0,1,159,17.94c13.5,1.85,26.26,6.24,39.22,10.25,33.54,10.38,71.75,11.45,105.77,2.59,12.77-3.32,25.06-8.23,38-11,18.8-4,38.68-4.3,57.77-2.61,14.5,1.28,28.2,5.23,42,9.65a190.73,190.73,0,0,0,46.12,9c19.47,1.26,39.45.47,58.54-3.78,12.88-2.86,25.14-7.79,37.91-11,33.06-8.37,68.73-6,101,4.39,14.11,4.53,28.07,8.24,42.86,9.79a215.26,215.26,0,0,0,60.24-2c13.39-2.42,26-7.26,39.08-11,17.38-4.92,35.22-6.29,53.24-5.92a170.75,170.75,0,0,1,47.62,7.53c13.25,4.1,26.22,8.42,40,10.35a226,226,0,0,0,30.76,2.06c10.3,0,10.31-16,0-16Z"/></svg>
+      </div>
     </header>
     <div class="homepage-content">
       <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
