adding homepage content, playing with design

--- a/assets/sass/base/defaults.scss
+++ b/assets/sass/base/defaults.scss
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Overpass', sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -20,5 +20,5 @@ a {
 }
 
 p {
-  margin: 0 0 1.5em;
+  margin: 0 0 2em;
 }
