--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,4 +1,6 @@
 @import "base/normalize";
 @import "base/webfonts";
 @import "base/defaults";
+@import "common/layout";
 @import "components/homepage-header";
+@import "components/homepage-content";
