--- a/assets/sass/base/webfonts.scss
+++ b/assets/sass/base/webfonts.scss
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Overpass&display=swap');
