--- a/assets/sass/components/homepage-header.scss
+++ b/assets/sass/components/homepage-header.scss
@@ -1,29 +1,58 @@
 .homepage-header {
-	background: #032d9d;
+	background: #193b69;
 	color: white;
-	margin: 4em;
-	padding: 6em 0;
+	margin: 4em auto;
+	padding: 6em 8em 8em;
 	max-width: 1200px;
-	box-shadow: 2em 2em 0 0 rgba(#032d9d, 0.1);
+	position: relative;
+	animation: shadow 0.5s ease-out forwards 1s;
 }
 
 .homepage-header__contents {
-	max-width: 940px;
-	margin: 0 auto;
+	max-width: $content-max-width + 60px;
+	position: relative;
+
+	&::after {
+		content: '';
+    display: block;
+    padding-bottom: 5%;
+    background: url(/ldn-to-ny.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 0 50%;
+	}
 }
 
 .homepage-header__permalink {
 	color: inherit;
 	text-decoration: none;
-	margin-bottom: 4em;
-	display: block;
 }
 
 .homepage-header__title {
-	margin: 0;
+	margin-bottom: 4em;
+	display: block;
 	font-size: 1em;
+	font-weight: 400;
 }
 
 .homepage-header__subtitle {
 	font-size: 3em;
+}
+
+// .homepage-header__full-stop--london {
+// 	color: black;
+// }
+
+// .homepage-header__full-stop--ny {
+// 	color: #FFD400;
+// }
+
+@keyframes shadow {
+	from {
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.05);
+	}
+
+	to {
+		box-shadow: 3em 3em 0 0 rgba(0, 0, 0, 0.05);
+	}
 }
