--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,3 +4,5 @@
 @import "common/layout";
 @import "components/homepage-header";
 @import "components/homepage-content";
+@import "components/gallery";
+@import "components/post-list";
