--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,7 +1,8 @@
+@import "common/layout";
+@import "common/media-queries";
 @import "base/normalize";
 @import "base/webfonts";
 @import "base/defaults";
-@import "common/layout";
 @import "components/homepage-header";
 @import "components/homepage-content";
 @import "components/gallery";
