add a basic posts list page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -55,7 +55,7 @@
           </li>
         {{ end }}
         </ul>
-        <p><a class="homepage-content__cta" href="#">See all posts</a></p>
+        <p><a class="homepage-content__cta" href="/posts/">See all posts</a></p>
       </section>
     </div>
   </main>
