non-homepage nav component

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,9 +6,7 @@
           <h1 class="homepage-header__title">{{.Site.Title}}</h1>
         </a>
         {{ with .Site.Params.Subtitle }}
-          <p class="homepage-header__subtitle">
-            James Shakespeare builds websites, like this one. He is from London and works at <a href="https://qz.com/user/777129/">Quartz</a> in New York<span class="homepage-header__full-stop--ny">.</span>
-          </p>
+          <p class="homepage-header__subtitle">James Shakespeare builds websites, like this one. He is from London and works at <a href="https://qz.com/user/777129/">Quartz</a> in New York.</p>
         {{ end }}
         <div class="homepage-header__decoration" aria-hidden="true"></div>
       </div>
