--- a/assets/sass/components/homepage-content.scss
+++ b/assets/sass/components/homepage-content.scss
@@ -25,7 +25,7 @@
 	padding: 1em 2em;
 	border: 2px solid var(--foreground, black);
 	text-decoration: none;
-	box-shadow: 2px 2px 0 0 var(--foreground, black);
+	box-shadow: 2px 2px 0 0 black;
 
 	&:hover {
 		text-decoration: none;
@@ -39,5 +39,10 @@
 		margin-left: 1em;
 		font-size: 2em;
 		line-height: 1;
+	}
+
+	&:active {
+		box-shadow: none;
+		margin: 2px -2px -2px 2px;
 	}
 }
