--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,18 +1,17 @@
 {{ define "main" }}
   <main>
-    <div class="post">
-    	<nav>
-    		<a href="/">jshakespeare.com</a>
-    	</nav>
-    	<article>
-    		<header class="post__header">
-  		  	<h1 class="post__headline">{{.Title}}</h1>
-  		  	<time class="post__dateline" datetime="{{.Date}}">{{.Date.Format "1 January 2006"}}</time>
-  		  </header>
-        <div class="post__content">
-  	  	  {{.Content}}
-        </div>
-  	  </article>
-    </div>
+  	<nav class="nav">
+  		<a class="nav__site-permalink" href="{{.Site.BaseURL}}">{{.Site.Title}}</a>
+      <p class="nav__description">James Shakespeare builds websites, like this one. He is from London and works at <a href="https://qz.com/user/777129/">Quartz</a> in New York.</p>
+  	</nav>
+  	<article class="post">
+  		<header class="post__header">
+		  	<h1 class="post__headline">{{.Title}}</h1>
+		  	<time class="post__dateline" datetime="{{.Date}}">{{.Date.Format "1 January 2006"}}</time>
+		  </header>
+      <div class="post__content">
+	  	  {{.Content}}
+      </div>
+	  </article>
   </main>
 {{ end }}
