--- a/assets/sass/components/gallery.scss
+++ b/assets/sass/components/gallery.scss
@@ -25,7 +25,7 @@
 
 .gallery__img {
 	display: block;
-	box-shadow: 0.333333em 0.333333em 0 0 var(--foreground, black);
+	box-shadow: 0.333333em 0.333333em 0 0 black;
 }
 
 .gallery__credit {
