--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,9 +5,7 @@
         <a class="homepage-header__permalink" href="{{.Site.BaseURL}}">
           <h1 class="homepage-header__title">{{.Site.Title}}</h1>
         </a>
-        {{ with .Site.Params.Subtitle }}
-          <p class="homepage-header__subtitle">James Shakespeare builds websites, like this one. He is from London and works at <a href="https://qz.com/user/777129/">Quartz</a> in New York.</p>
-        {{ end }}
+        <p class="homepage-header__subtitle">James Shakespeare builds websites, like this one. He is from London and works at <a href="https://qz.com/user/777129/">Quartz</a> in New York.</p>
         <div class="homepage-header__decoration" aria-hidden="true"></div>
       </div>
     </header>
@@ -16,7 +14,10 @@
         <h2 class="homepage-content__section-heading">About</h2>
         <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
         {{.Content}}
-        <p><a class="homepage-content__cta" href="#">Click on this button, dammit</a></p>
+        <a class="cta" href="/about/">
+          <span class="cta__contents">Read more</span>
+          <span class="cta__decoration" aria-hidden="true"></span>
+        </a>
         <p>Here's a bit more text, that talks about what is on this site and why you should keep reading.</p>
         <p>You can also find me on <a href="https://twitter.com/jeshake">Twitter</a>, <a href="http://github.com/jshakes">GitHub</a> and <a href="https://www.linkedin.com/in/james-shakespeare-40784435/">LinkedIn</a>.</p>
         <div class="gallery">
@@ -53,7 +54,12 @@
           </li>
         {{ end }}
         </ul>
-        <p><a class="homepage-content__cta" href="/posts/">See all posts</a></p>
+        <p>
+          <a class="cta" href="/posts/">
+            <span class="cta__contents">See all posts</span>
+            <span class="cta__decoration" aria-hidden="true"></span>
+          </a>
+        </p>
       </section>
     </div>
   </main>
