--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,29 +14,7 @@
         <h2 class="homepage-content__section-heading">About</h2>
         <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
         {{.Content}}
-        <a class="cta" href="/about/">
-          <span class="cta__contents">Read more</span>
-          <span class="cta__decoration" aria-hidden="true"></span>
-        </a>
-        <p>Here's a bit more text, that talks about what is on this site and why you should keep reading.</p>
-        <p>You can also find me on <a href="https://twitter.com/jeshake">Twitter</a>, <a href="http://github.com/jshakes">GitHub</a> and <a href="https://www.linkedin.com/in/james-shakespeare-40784435/">LinkedIn</a>.</p>
-        <div class="gallery">
-          <div class="gallery__column">
-            <figure class="gallery__item">
-              <img class="gallery__img" src="/james-shakespeare.jpg" alt="James Shakespeare" />
-              <figcaption class="gallery__credit">Credit: <a href="https://www.instagram.com/erallphotography/">Erica Rallo</a></figcaption>
-            </figure>
-          </div>
-          <div class="gallery__column">
-            <figure class="gallery__item">
-              <img class="gallery__img" src="/east-river.jpg" alt="The East River, New York" />
-            </figure>
-            <figure class="gallery__item">
-              <img class="gallery__img" src="/park-avenue.jpg" alt="Park Avenue, New York" />
-            </figure>
-          </div>
-        </div>
-      </section>
+        <a class="cta" href="/about/">Read more<span class="cta__decoration" aria-hidden="true"></span></a>
       <section class="homepage-content__section">
         <h2 class="homepage-content__section-heading">Projects</h2>
         <p>I have made lots of things some things I have made include...</p>
@@ -55,10 +33,7 @@
         {{ end }}
         </ul>
         <p>
-          <a class="cta" href="/posts/">
-            <span class="cta__contents">See all posts</span>
-            <span class="cta__decoration" aria-hidden="true"></span>
-          </a>
+          <a class="cta" href="/posts/">See all posts<span class="cta__decoration" aria-hidden="true"></span></a>
         </p>
       </section>
     </div>
