--- a/assets/sass/base/defaults.scss
+++ b/assets/sass/base/defaults.scss
@@ -56,3 +56,19 @@ p {
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
 }
+
+figure {
+  margin: 0 0 2em;
+
+  img {
+    display: block;
+    box-shadow: 0.333333em 0.333333em 0 0 black;
+  }
+
+  figcaption {
+    margin-top: 1em;
+    margin-left: 0.333333em;
+    line-height: 1;
+    font-size: 0.75em;
+  }
+}
