--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -3,7 +3,8 @@
   	<nav class="nav">
   		<a class="nav__site-permalink" href="{{.Site.BaseURL}}">{{.Site.Title}}</a>
       <p class="nav__description">James Shakespeare builds websites, like this one. He is from London and works at <a href="https://qz.com/user/777129/">Quartz</a> in New York.</p>
-  	</nav>
+  	 <div class="nav__decoration" aria-hidden="true"></div>
+    </nav>
   	<article class="post">
   		<header class="post__header">
 		  	<h1 class="post__headline">{{.Title}}</h1>
