--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,6 +3,7 @@
   	<nav class="nav">
   		<a class="nav__site-permalink" href="{{.Site.BaseURL}}">{{.Site.Title}}</a>
       <p class="nav__description">James Shakespeare builds websites, like this one. He is from London and works at <a href="https://qz.com/user/777129/">Quartz</a> in New York.</p>
+  		<div class="nav__decoration" aria-hidden="true"></div>
   	</nav>
   	<article class="post">
   		<header class="post__header">
