--- a/assets/sass/components/cta.scss
+++ b/assets/sass/components/cta.scss
@@ -26,8 +26,8 @@ $cta-border-width: 0.25em;
 		margin: 2px -2px -2px 2px;
 
 		&::before {
-			bottom: 0;
-			right: 0;
+			bottom: -$cta-border-width;
+			right: -$cta-border-width;
 		}
 	}
 }
