--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,13 +1,15 @@
+@import "common/decoration";
 @import "common/layout";
 @import "common/media-queries";
-@import "common/decoration";
 @import "common/resets";
+@import "base/defaults";
 @import "base/normalize";
 @import "base/webfonts";
-@import "base/defaults";
-@import "components/homepage-header";
-@import "components/homepage-content";
-@import "components/post-list";
-@import "components/post";
-@import "components/header";
 @import "components/cta";
+@import "components/header";
+@import "components/homepage-content";
+@import "components/homepage-header";
+@import "components/nav";
+@import "components/page";
+@import "components/post";
+@import "components/post-list";
