--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,6 +6,16 @@
           <h1 class="homepage-header__title">{{.Site.Title}}</h1>
         </a>
         <p class="homepage-header__subtitle">James Shakespeare builds websites, like this one. He is from London and works at <a href="https://qz.com/user/777129/">Quartz</a> in New York.</p>
+        <nav class="nav">
+          <ul class="nav__items">
+            <li class="nav__item">
+              <a href="/about/">About</a>
+            </li>
+            <li class="nav__item">
+              <a href="/posts/">Posts</a>
+            </li>
+          </ul>
+        </nav>
         <div class="homepage-header__decoration" aria-hidden="true"></div>
       </div>
     </header>
