--- a/assets/sass/components/homepage-header.scss
+++ b/assets/sass/components/homepage-header.scss
@@ -8,7 +8,7 @@ $border-width: 0.5em;
 
 	@include larger-than(mobile) {
 		margin: 4em;
-		padding: 6em 8em;
+		padding: 5em 8em;
 	}
 }
 
@@ -29,7 +29,6 @@ $border-width: 0.5em;
 }
 
 .homepage-header__title {
-	margin-bottom: 4em;
 	display: block;
 	font-size: 1em;
 	font-weight: 400;
@@ -38,7 +37,7 @@ $border-width: 0.5em;
 .homepage-header__subtitle {
 	font-size: 1.666666em;
 	line-height: 1.333333;
-	margin-bottom: 1em;
+	margin: 5rem 0;
 
 	@include larger-than(mobile) {
 		font-size: 3em;
