better link text on homepage

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,7 +24,8 @@
         <h2 class="homepage-content__section-heading">About</h2>
         <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
         {{.Content}}
-        <a class="cta" href="/about/">Read more<span class="cta__decoration" aria-hidden="true"></span></a>
+        <a class="cta" href="/about/">More about me<span class="cta__decoration" aria-hidden="true"></span></a>
+      </section>
       <section class="homepage-content__section">
         <h2 class="homepage-content__section-heading">Projects</h2>
         <p>I have made lots of things some things I have made include...</p>
@@ -43,7 +44,7 @@
         {{ end }}
         </ul>
         <p>
-          <a class="cta" href="/posts/">See all posts<span class="cta__decoration" aria-hidden="true"></span></a>
+          <a class="cta" href="/posts/">All posts<span class="cta__decoration" aria-hidden="true"></span></a>
         </p>
       </section>
     </div>
