--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,13 +1,13 @@
 <header class="header">
 	<nav class="nav header__nav">
-		<ul class="nav-items">
-			<li class="nav-item">
+		<ul class="nav__items">
+			<li class="nav__item">
 				<a href="/">jshakespeare.com</a>
 			</li>
-			<li class="nav-item">
+			<li class="nav__item">
 				<a href="/about/">About</a>
 			</li>
-			<li class="nav-item">
+			<li class="nav__item">
 				<a href="/posts/">Posts</a>
 			</li>
 		</ul>
