--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,6 +5,8 @@
 @import "base/defaults";
 @import "base/normalize";
 @import "base/webfonts";
+@import "base/typography";
+@import "base/pygments";
 @import "components/cta";
 @import "components/header";
 @import "components/homepage-content";
