--- a/assets/sass/base/defaults.scss
+++ b/assets/sass/base/defaults.scss
@@ -30,8 +30,6 @@
 }
 
 body {
-  font-family: 'Overpass', sans-serif;
-  -webkit-font-smoothing: antialiased;
   background-color: var(--background, white);
   color: var(--foreground, black);
 }
@@ -49,14 +47,6 @@ a {
   }
 }
 
-p {
-  margin: 0 0 2em;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
-}
-
 figure {
   margin: 0 0 2em;
 
@@ -70,5 +60,14 @@ figure {
     margin-left: 0.333333em;
     line-height: 1;
     font-size: 0.75em;
+  }
+}
+
+code,
+pre {
+  background: rgba(0, 0, 0, 0.05);
+
+  @media (prefers-color-scheme: dark) {
+    background: rgba(0, 0, 0, 0.25);
   }
 }
