--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2,6 +2,7 @@
 @import "common/layout";
 @import "common/media-queries";
 @import "common/resets";
+@import "base/config";
 @import "base/defaults";
 @import "base/normalize";
 @import "base/webfonts";
