--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -5,7 +5,7 @@
       <h1 class="page__heading">{{.Title}}</h1>
     	<ul class="post-list">
       <!-- Ranges through content/posts/*.md -->
-      {{ range .Site.RegularPages }}
+      {{ range .Pages }}
         <li class="post-list__item">
           <a href="{{.Permalink}}" class="post-list__link">
             <h3 class="post-list__heading">{{.Title}}</h3>
