--- a/assets/sass/base/typography.scss
+++ b/assets/sass/base/typography.scss
@@ -1,11 +1,8 @@
-$base-font: 'Overpass', sans-serif;
-$code-font: 'Ubuntu Mono', 'Courier New', monospace;
-$display-font: $base-font;
-
 html {
   font-family: $base-font;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: $base-font-size;
 }
 
 blockquote {
