--- a/assets/sass/base/webfonts.scss
+++ b/assets/sass/base/webfonts.scss
@@ -1,3 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css?family=PT+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Overpass&display=swap');
 @import url("https://fonts.googleapis.com/css?family=Ubuntu+Mono");
