--- a/assets/sass/base/defaults.scss
+++ b/assets/sass/base/defaults.scss
@@ -3,10 +3,8 @@
   --accent-2: #0646df;
   --background: white;
   --foreground: #242427;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
+  @media (prefers-color-scheme: dark) {
     --background: #242427;
     --foreground: white;
   }
@@ -69,5 +67,17 @@ pre {
 
   @media (prefers-color-scheme: dark) {
     background: rgba(0, 0, 0, 0.25);
+  }
+}
+
+hr {
+  height: 0;
+  border: 0;
+  text-align: center;
+  margin: 3em 0;
+  padding: 0;
+
+  &::before {
+    content: '▰';
   }
 }
