--- a/assets/sass/components/cta.scss
+++ b/assets/sass/components/cta.scss
@@ -9,6 +9,7 @@ $cta-border-width: 0.25em;
 	padding: 1em 2em;
 	text-decoration: none;
 	position: relative;
+	font-style: normal;
 
 	&:hover {
 		text-decoration: none;
