--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -9,6 +9,12 @@
       <div class="post__content">
 	  	  {{.Content}}
       </div>
+      <div class="post__footer">
+        <p class="post__postscript">I'm James Shakespeare. I build websites and write about technology. If you've read this far, you should consider following me on <a href="//twitter.com/jeshake/" target="_blank">Twitter</a>.</p>
+        <p>
+          <a href="/posts/" class="cta">See more posts<span class="cta__decoration" aria-hidden="true"></span></a>
+        </p>
+      </div>
 	  </article>
   </main>
 {{ end }}
