mobile and tablet styling

--- a/assets/sass/base/config.scss
+++ b/assets/sass/base/config.scss
@@ -1,5 +1,7 @@
-$content-max-width: 740px;
-$base-font-size: 125%;
+$content-max-width-mobile: 660px;
+$content-max-width-tablet: 740px;
+$page-margin-mobile: 1.25em;
+$page-margin-tablet: 2em;
 $base-font: 'PT Sans';
 $code-font: 'Ubuntu Mono', 'Courier New', monospace;
 $display-font: 'Overpass', sans-serif;
