--- a/assets/sass/components/page.scss
+++ b/assets/sass/components/page.scss
@@ -1,6 +1,16 @@
 .page {
-	max-width: $content-max-width;
+	max-width: $content-max-width-mobile;
 	margin: 0 auto;
+	padding: 0 $page-margin-mobile;
+
+	@include larger-than(mobile) {
+		padding: $page-margin-tablet;
+		max-width: $content-max-width-tablet;
+	}
+
+	@include larger-than(tablet) {
+		padding: 0;
+	}
 }
 
 .page__heading {
