--- a/assets/sass/components/post-list.scss
+++ b/assets/sass/components/post-list.scss
@@ -1,7 +1,11 @@
 .post-list {
-	padding: 0;
 	margin: 0 0 4em;
 	line-height: 1.666666;
+	padding: 0 0 0 $page-margin-mobile;
+
+	@include larger-than(mobile) {
+		padding: 0;
+	}
 }
 
 .post-list__link {
