--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,9 +1,7 @@
 {{ define "main" }}
-  <main>
+  <main class="page">
     {{ partial "nav.html" }}
-  	<div class="page">
-		  <h1 class="page__heading">{{.Title}}</h1>
-	  	{{.Content}}
-	  </div>
+		<h1 class="page__heading">{{.Title}}</h1>
+	  {{.Content}}
   </main>
 {{ end }}
