--- a/assets/sass/components/post.scss
+++ b/assets/sass/components/post.scss
@@ -1,15 +1,17 @@
-.post {
-	max-width: $content-max-width;
-	margin: 0 auto;
-}
-
 .post__header {
 	margin: 6em 0;
 }
 
 .post__headline {
-	font-size: 4em;
 	margin: 0;
+
+	@include larger-than(mobile) {
+		font-size: 3em;
+	}
+
+	@include larger-than(tablet) {
+		font-size: 4em;
+	}
 }
 
 .post__dateline {
@@ -26,8 +28,12 @@
 
 	ol,
 	ul {
-		padding: 0;
+		padding: 0 0 0 $page-margin-mobile;
 		margin: 2em 0;
+
+		@include larger-than(mobile) {
+			padding: 0;
+		}
 	}
 
 	li {
@@ -39,8 +45,18 @@
 	}
 
 	pre {
-		padding: 2em;
-		margin: 2em -2em;
+		padding: $page-margin-mobile;
+		margin: 2em $page-margin-mobile * -1;
+
+		@include larger-than(mobile) {
+			padding: $page-margin-tablet;
+			margin: 2em -$page-margin-tablet;
+		}
+
+		@include larger-than(desktop) {
+			padding: 2em;
+			margin: 2em 2em;
+		}
 	}
 }
 
