--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
         <div class="homepage-header__decoration" aria-hidden="true"></div>
       </div>
     </header>
-    <div class="homepage-content">
+    <div class="page homepage-content">
       <section class="homepage-content__section">
         <h2 class="homepage-content__section-heading">About</h2>
         <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
