--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <main>
+  <main class="page">
   	{{ partial "nav.html" }}
   	<article class="post">
   		<div class="post__header">
