footer; fix post heading hierarchy; more margin fiddling

--- a/assets/sass/common/decoration.scss
+++ b/assets/sass/common/decoration.scss
@@ -49,11 +49,11 @@
 	&::before {
 		content: $character;
 		position: absolute;
-		left: $page-margin-mobile * -1;
+		left: -$page-margin-mobile;
 		line-height: inherit;
 
 		@include larger-than(mobile) {
-			left: $page-margin-tablet * -1;
+			left: -$page-margin-tablet + 0.666666em;
 		}
 	}
 }
