--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -9,6 +9,7 @@
 @import "base/typography";
 @import "base/pygments";
 @import "components/cta";
+@import "components/footer";
 @import "components/header";
 @import "components/homepage-content";
 @import "components/homepage-header";
