--- a/assets/sass/common/layout.scss
+++ b/assets/sass/common/layout.scss
@@ -1,1 +1,14 @@
-$content-max-width: 768px;
+@mixin constrain {
+	max-width: $content-max-width-mobile;
+	margin: 0 auto;
+	padding: 0 $page-margin-mobile;
+
+	@include larger-than(mobile) {
+		padding: $page-margin-tablet;
+		max-width: $content-max-width-tablet;
+	}
+
+	@include larger-than(tablet) {
+		padding: 0;
+	}
+}
