--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
     <header class="homepage-header">
       <div class="homepage-header__contents">
         <a class="homepage-header__permalink" href="{{.Site.BaseURL}}">
-          <h1 class="homepage-header__title">{{.Site.Title}}</h1>
+          <h1 class="homepage-header__title">jshakespeare.com</h1>
         </a>
         <p class="homepage-header__subtitle">James Shakespeare builds websites, like this one. He is from London and works at <a href="https://qz.com/user/777129/">Quartz</a> in New York.</p>
         <nav class="nav">
