--- a/assets/sass/base/defaults.scss
+++ b/assets/sass/base/defaults.scss
@@ -46,7 +46,7 @@ a {
 }
 
 figure {
-  margin: 0 0 2em;
+  margin: 0 auto 2em;
 
   img {
     display: block;
@@ -54,10 +54,13 @@ figure {
   }
 
   figcaption {
-    margin-top: 1em;
-    margin-left: 0.333333em;
-    line-height: 1;
-    font-size: 0.75em;
+    margin-top: 1.5em;
+    margin-left: 0.333333rem;
+    font-size: 0.8em;
+
+    p {
+      line-height: 1;
+    }
   }
 }
 
