--- a/assets/sass/components/footer.scss
+++ b/assets/sass/components/footer.scss
@@ -2,6 +2,7 @@
 	@include constrain;
 
 	font-family: $display-font;
-	margin-top: 6em;
-	margin-bottom: 4em;
+	margin-top: 6rem;
+	margin-bottom: 4rem;
+	font-size: 0.8em;
 }
